--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,15 @@
         <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
 
+    <filter>
+        <filter-name>crosfilter</filter-name>
+        <filter-class>com.zucc.doublefish.news.filter.CROSFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>crosfilter</filter-name>
+        <url-pattern>/user</url-pattern>
+    </filter-mapping>
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
