--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -14,7 +14,7 @@
     </filter>
     <filter-mapping>
         <filter-name>crosfilter</filter-name>
-        <url-pattern>/user</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 
     <listener>
