--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
 
+    <listener>
+        <listener-class>com.zucc.doublefish.news.listener.SessionListener</listener-class>
+    </listener>
+
     <filter>
         <filter-name>crosfilter</filter-name>
         <filter-class>com.zucc.doublefish.news.filter.CROSFilter</filter-class>
