--- a/classes/artifacts/news_release_system_war_exploded/WEB-INF/web.xml
+++ b/classes/artifacts/news_release_system_war_exploded/WEB-INF/web.xml
@@ -13,13 +13,15 @@
     </listener>
 
     <filter>
-        <filter-name>crosfilter</filter-name>
+        <filter-name>corsfilter</filter-name>
         <filter-class>com.zucc.doublefish.news.filter.CORSFilter</filter-class>
     </filter>
+
     <filter-mapping>
-        <filter-name>crosfilter</filter-name>
+        <filter-name>corsfilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
 
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
